删除无用代码

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -145,12 +145,13 @@ database.dispatcher {
   }
 }
 
+
 db {
   default.driver=com.mysql.cj.jdbc.Driver
-  default.url="jdbc:mysql://gz-cdb-c1z80bpl.sql.tencentcdb.com:63326/baojie?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8"
-  default.username=looktest
-  default.password="MXuEBlwk0U5vhmOrxdsde"
-  default.host="gz-cdb-c1z80bpl.sql.tencentcdb.com"
+  default.url="jdbc:mysql://127.0.0.1/student-estimate?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true"
+  default.username=root
+  default.password="12345678"
+  default.host="3306"
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   default.logSql=false
