1修复学分计算问题2特长审核及计算功能

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,7 +154,7 @@ db {
   default.host="3306"
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  default.logSql=false
+  default.logSql=true
 }
 play.modules.enabled += "play.api.cache.redis.RedisCacheModule"
 play.modules.enabled += service.CustomCacheModule
