--- a/conf/application.conf
+++ b/conf/application.conf
@@ -168,7 +168,7 @@ play.cache.redis {
   # redis server: database number (optional)
   database = 2
   # authentication password (optional)
-  password = ""
+  password = "123456"
   refresh-minute = 10
 }
 play.http.actionCreator = "handlers.ApiCheckActionCreator"
