--- a/conf/application.conf
+++ b/conf/application.conf
@@ -148,9 +148,9 @@ database.dispatcher {
 
 db {
   default.driver=com.mysql.cj.jdbc.Driver
-  default.url="jdbc:mysql://120.48.81.209:3306/student_estimate?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true"
+  default.url="jdbc:mysql://127.0.0.1:3306/student_estimate?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true"
   default.username=root
-  default.password="12345678"
+  default.password="123456"
   default.host="3306"
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
